k8s/manifests/07-log-processor.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-processor-deployment
  namespace: microservices
  labels:
    app: log-processor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-processor
  template:
    metadata:
      labels:
        app: log-processor
    spec:
      containers:
      - name: log-processor
        image: dockerfiles-log-message-processor
        imagePullPolicy: IfNotPresent
