k8s/manifests/04-users-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-api-deployment
  namespace: microservices
  labels:
    app: users-api
spec:
  replicas: 2 # Iniciamos con 2 réplicas
  selector:
    matchLabels:
      app: users-api
  template:
    metadata:
      labels:
        app: users-api
    spec:
      containers:
      - name: users-api
        # El nombre de la imagen debe coincidir con la construida
        image: dockerfiles-users-api 
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8083
        resources:
          requests:
            cpu: "200m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
        # Health Checks
        readinessProbe:
          tcpSocket:
            port: 8083
          initialDelaySeconds: 20
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 8083
          initialDelaySeconds: 45
          periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: users-api-service
  namespace: microservices
spec:
  selector:
    app: users-api
  ports:
  - protocol: TCP
    port: 8083
    targetPort: 8083
