k8s/manifests/06-todos-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todos-api-deployment
  namespace: microservices
  labels:
    app: todos-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: todos-api
  template:
    metadata:
      labels:
        app: todos-api
    spec:
      containers:
      - name: todos-api
        image: dockerfiles-todos-api
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8082
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "300m"
            memory: "256Mi"
        readinessProbe:
          tcpSocket:
            port: 8082
          initialDelaySeconds: 10
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: 8082
          initialDelaySeconds: 30
          periodSeconds: 20
---
apiVersion: v1
kind: Service
metadata:
  name: todos-api-service
  namespace: microservices
spec:
  selector:
    app: todos-api
  ports:
  - protocol: TCP
    port: 8082
    targetPort: 8082
